--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -14,10 +14,10 @@ jobs:
       with:
         python-version: '3.11'
 
-    - name: Install dependencies
+    - name: Install pip + Flask
       run: |
         python -m pip install --upgrade pip
-        pip install -r requirements.txt
+        pip install flask
 
     - name: Run tests
       run: |
